<resources>
    <string name="app_name">Audible Arabic</string>
    <string name="category_alphabets">Alphabets</string>
    <string name="category_numbers">Numbers</string>
    <string name="category_fruits">Fruits</string>
    <string name="category_colors">Colors</string>
<!--     <string name="category_things">Things</string> -->
    <string name="category_animals">Animals</string>
    <string name="category_phrases">Phrases</string>
</resources>
