<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.sanamshikalgar.audiblearabic.MainActivity">

    <TextView
        android:id="@+id/alphabets"
        style="@style/CategoryStyle"
        android:background="@color/category_alphabets"
        android:text="@string/category_alphabets" />

    <TextView
        android:id="@+id/numbers"
        style="@style/CategoryStyle"
        android:background="@color/category_numbers"
        android:text="@string/category_numbers" />

    <TextView
        android:id="@+id/fruits"
        style="@style/CategoryStyle"
        android:background="@color/category_fruits"
        android:text="@string/category_fruits" />

    <TextView
        android:id="@+id/colors"
        style="@style/CategoryStyle"
        android:background="@color/category_colors"
        android:text="@string/category_colors" />

    <TextView
        android:id="@+id/things"
        style="@style/CategoryStyle"
        android:background="@color/category_things"
        android:text="@string/category_things" />

    <TextView
        android:id="@+id/animals"
        style="@style/CategoryStyle"
        android:background="@color/category_animals"
        android:text="@string/category_animals" />

    <TextView
        android:id="@+id/phrases"
        style="@style/CategoryStyle"
        android:background="@color/category_phrases"
        android:text="@string/category_phrases" />

</LinearLayout>
